--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "be.falessenoe.firstroompack",
+  "name": "be.noefalesse.magicroom",
   "displayName": "room noe falesse",
   "version": "0.0.1",
   "unity": "2018.1",
